--- a/sevici_api/requirements.txt
+++ b/sevici_api/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==3.14.0
 django-extensions==3.2.1
 django-filter==23.1
 djangorestframework==3.14.0
+djangorestframework-gis==1.0
 idna==3.4
 importlib-metadata==6.6.0
 Markdown==3.4.3
