--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,9 @@ server {
     # SERVING DJANGO STATIC ASSETS #
     #################################
 
-    # location /api/static/ {
-    #     alias /usr/src/app/sevici-api/static/;
-    # }
+    location /api/static/ {
+        alias /usr/src/app/sevici-api/static/;
+    }
 
     # location /api/media/ {
     #     alias /usr/src/app/sevici-api/media/;
