--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "leaflet": "^1.9.3",
+    "plotly.js": "^2.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-filepond": "^7.1.2",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-timefield": "^3.3.1",
