--- a/sevici_api/requirements.txt
+++ b/sevici_api/requirements.txt
@@ -11,14 +11,19 @@ djangorestframework==3.14.0
 djangorestframework-gis==1.0
 idna==3.4
 importlib-metadata==6.6.0
+joblib==1.2.0
 Markdown==3.4.3
+numpy==1.24.3
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.29.0
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 sqlparse==0.4.4
+threadpoolctl==3.1.0
 tzdata==2023.3
 tzlocal==4.3
 urllib3==1.26.15
