--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "leaflet": "^1.9.3",
+    "moment": "^2.29.4",
     "plotly.js": "^2.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
