--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -51,25 +51,24 @@ services:
     networks:
       - sevici
 
-  # client:
-  #   restart: always
-  #   container_name: sevici-client
-  #   image: sevici-client:latest
-  #   build: 
-  #     context: ..
-  #     dockerfile: ./docker/client/Dockerfile
-  #     args:
-  #       API_SERVER: ${API_SERVER_URL}
-  #   environment:
-  #     NODE_ENV: ${NODE_ENV}
-  #     REACT_APP_PAYPAL_CLIENT_ID: ${REACT_APP_PAYPAL_CLIENT_ID}
-  #   command: sh -c "serve -s build -l 3000 --no-clipboard"
-  #   depends_on:
-  #     - backend
-  #   expose:
-  #     - 3000
-  #   networks:
-  #     - sevici
+  client:
+    restart: always
+    container_name: sevici-client
+    image: sevici-client:latest
+    build: 
+      context: ..
+      dockerfile: ./docker/client/Dockerfile
+      args:
+        API_SERVER: ${API_SERVER_URL}
+    environment:
+      NODE_ENV: ${NODE_ENV}
+    command: sh -c "serve -s build -l 3000 --no-clipboard"
+    depends_on:
+      - backend
+    expose:
+      - 3000
+    networks:
+      - sevici
 
   nginx:
     restart: always
