FIX: DOCKER COMPOSE

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       API_KEY: ${SEVICI_API_KEY}
+      CONTRACT: ${SEVICI_CONTRACT}
 
     volumes:
       - static:/usr/src/app/sevici-api/static
