--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       DJANGO_ADMIN_USER: ${DJANGO_ADMIN_USER}
       DJANGO_ADMIN_EMAIL: ${DJANGO_ADMIN_EMAIL}
       DJANGO_ADMIN_PASSWORD: ${DJANGO_ADMIN_PASSWORD}
-      SECRET_KEY: ${SECRET_KEY}
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DATABASE: ${DATABASE}
       DB_NAME: ${DB_NAME}
       DB_USER: ${POSTGRES_USER}
@@ -37,18 +37,16 @@ services:
       DB_PORT: ${DB_PORT}
       API_KEY: ${SEVICI_API_KEY}
       CONTRACT: ${SEVICI_CONTRACT}
+      SWAGGER_URL: ${SWAGGER_URL}
 
     volumes:
       - static:/usr/src/app/sevici-api/static
-      # - static:/usr/src/app/sevici-api/media
     expose:
       - 8000
     depends_on:
       - db
-      # - redis
     links:
       - db
-      # - redis
     networks:
       - sevici
 
@@ -81,20 +79,16 @@ services:
         dockerfile: ./Dockerfile
     volumes:
       - static:/usr/src/app/sevici-api/static
-      # - static:/usr/src/app/sevici-api/media
     ports:
       - 80:80
     depends_on:
       - backend
-      # - client
     networks:
       - sevici
 
 volumes:
   static:
     name: sevici-static
-  # redis-data:
-  #   name: flatter-redis-data
   db:
     name: sevici-db
 
