--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,11 +11,21 @@ server {
         alias /usr/src/app/sevici-api/static/;
     }
 
-    # location /api/media/ {
-    #     alias /usr/src/app/sevici-api/media/;
-    # }
-
     location /admin {
+        include             fastcgi_params;
+        proxy_pass          http://sevici-api:8000;
+        proxy_redirect      off;
+
+        proxy_connect_timeout 500;
+        proxy_read_timeout 500;
+
+        proxy_set_header    Host            $host;
+        proxy_set_header    X-Real-IP       $remote_addr;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    }
+
+    location /docs {
         include             fastcgi_params;
         proxy_pass          http://sevici-api:8000;
         proxy_redirect      off;
