FEAT: README AND NEW DOCUMENTATION DIAGRAMS
Also done last minute fixes

--- a/sevici_api/.env.example
+++ b/sevici_api/.env.example
@@ -1,5 +1,5 @@
-API_KEY="5c0d48fc1f553af8fb53e37a8390b91e69696a43"
+API_KEY="SEVICI_API_KEY"
 CONTRACT="seville"
-DJANGO_SECRET_KEY="django-insecure-e^2u*kd6535cb24myd(zt(+@h*y9#lmfhss(rm3^xij$j8qr^5"
-DB_USERNAME="sevici_user"
-DB_PASSWORD="sevici_password"
+DJANGO_SECRET_KEY=""
+DB_USERNAME=""
+DB_PASSWORD=""
